Completed search tags

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <div class="bashboard" style="z-index: 1; position:absolute; top:30%; width:100%; height:100px; background-color:red;">
                 </div>
             </div>
+            <div class="searchTags" style="display: flex;">
+
+            </div>
         </div>
     </body>
 </html>
