--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <body>
         <div class="viz"></div>
-            <div>
-                <div class="searchbox" style="z-index: 2;">
+            <div class="searchTags" style="display: flex;"></div>
+            <div class="searchContent" style="z-index: 2;">
+                <div class="searchbox" >
                     <input  type="text"  onfocus="firstTimeSearchFocus();" class="input" placeholder="What are your symptoms?">
                     <div class="searchbtn">
                         <i class="fas fa-search"></i>
@@ -22,12 +23,8 @@
                 <div class="searchListDiv">
                     <ul class="searchList"></ul>
                 </div>
-                <div class="bashboard" style="z-index: 1; position:absolute; top:30%; width:100%; height:100px; background-color:red;">
-                </div>
             </div>
-            <div class="searchTags" style="display: flex;">
-
-            </div>
+            <div class="dashboard" style="z-index: 1;"></div>            
         </div>
     </body>
 </html>
