corrected css and made dashboard

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="viz"></div>
-            <div class="searchTags" style="display: flex;"></div>
+            <div class="searchTags" ></div>
             <div class="searchContent" style="z-index: 2;">
                 <div class="searchbox" >
                     <input  type="text"  onfocus="firstTimeSearchFocus();" class="input" placeholder="What are your symptoms?">
@@ -24,7 +24,7 @@
                     <ul class="searchList"></ul>
                 </div>
             </div>
-            <div class="dashboard" style="z-index: 1;"></div>            
+            <div class="dashboard"></div>            
         </div>
     </body>
 </html>
