added the drug pannel functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/b44dbccbe8.js" crossorigin="anonymous"></script>
+        <script src="http://underscorejs.org/underscore-min.js"></script>
         <script type="text/javascript" src="myscript.js"></script>
         <link rel="stylesheet" href="style.css">
 
@@ -24,7 +25,11 @@
                     <ul class="searchList"></ul>
                 </div>
             </div>
-            <div class="dashboard"></div>            
+            <div class="dashboard">
+                <div class="drugBoard"><ul class="drugList"></ul></div>
+                <div class="graphPannel"></div>
+                <div class="NLPPannel"></div>
+            </div>            
         </div>
     </body>
 </html>
