made the stacked bar chart

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/b44dbccbe8.js" crossorigin="anonymous"></script>
         <script src="http://underscorejs.org/underscore-min.js"></script>
+        <script type="text/javascript" src="https://d3js.org/d3.v3.js"></script>
         <script type="text/javascript" src="myscript.js"></script>
         <link rel="stylesheet" href="style.css">
 
