--- a/test.html
+++ b/test.html
@@ -122,7 +122,7 @@ var rect = groups.selectAll("rect")
   .attr("height", function(d) { return y(d.y0) - y(d.y0 + d.y); })
   .attr("width", x.rangeBand())
   .on("mouseover", function() { 
-    console.log("aaya")  
+    // console.log("aaya")  
     tooltip.style("display", null); })
   .on("mouseout", function() { tooltip.style("display", "none"); })
   .on("mousemove", function(d) {
@@ -139,7 +139,7 @@ var legend = svg.selectAll(".legend")
   .enter().append("g")
   .attr("class", "legend")
   .attr("transform", function(d, i) { return "translate(30," + i * 19 + ")"; });
- 
+
 legend.append("rect")
   .attr("x", width - 18)
   .attr("width", 18)
