minor updates and added loading screen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <div class = "loadingScreen"></div>
         <div class="searchTags" ></div>
         <div class="searchContent" style="z-index: 2;">
             <div class="searchbox" >
