added side effects

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
             </div>
         </div>
         <div class="dashboard">
-            <div class="drugBoard"><ul class="drugList"></ul></div>
+            <div class="drugBoard"><p class="boardTitle">Drug Board</p><ul class="drugList"></ul></div>
             <div class="graphPannel"></div>
-            <div class="NLPPannel"></div>
+            <div class="NLPPannel">
+                <div class="topNLP"></div>
+                <div class="midNLP"></div>
+                <div class="bottomNLP"><p class = boardTitle > Side Effects</p></div>
+            </div>
         </div>            
         
     </body>
