--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css">
 
     </head>
-
+    <!-- hiii this is tanishkas code-->
     <body>
         <div class = "loadingScreen"></div>
         <div class="searchTags" ></div>
