--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css">
 
     </head>
-    <!-- gye hiii this is aabhaas' new code-->
+    <!-- aabhaas c 4e-->
     <body>
         <div class = "loadingScreen"></div>
         <div class="searchTags" ></div>
