added reviews functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="http://underscorejs.org/underscore-min.js"></script>
         <script type="text/javascript" src="https://d3js.org/d3.v3.js"></script>
         <script type="text/javascript" src="myscript.js"></script>
+        <script src="donut.js"></script>
         <link rel="stylesheet" href="style.css">
 
     </head>
