--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
         <title>
             Data Visualization
         </title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://kit.fontawesome.com/b44dbccbe8.js" crossorigin="anonymous"></script>
-        <script src="http://underscorejs.org/underscore-min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://kit.fontawesome.com/b44dbccbe8.js" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
         <script type="text/javascript" src="https://d3js.org/d3.v3.js"></script>
+        <script type="text/javascript" src="fuzzyset.js"></script>
+        <!-- <script src="jquery.min.js"></script> -->
+        <!-- <script src="https://github.com/Glench/fuzzyset.js/tree/master/lib/fuzzyset.js"></script> -->
+
+        <!-- <script src="http://Glench.github.com/lib/fuzzyset.js"></script> -->
+
         <script type="text/javascript" src="myscript.js"></script>
-        <script src="donut.js"></script>
+        <script type="text/javascript" src="donut.js"></script>
         <link rel="stylesheet" href="style.css">
 
     </head>
