major style adjusts

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
             <div class="drugBoard"><p class="boardTitle">Drug Board</p><ul class="drugList"></ul></div>
             <div class="graphPannel"></div>
             <div class="NLPPannel">
+                <div class="topNLPHeader"><p class = boardTitle > Reviews</p></div>
                 <div class="topNLP"></div>
+                <div class="midNLPHeader"><p class = boardTitle > Effectiveness</p></div>
                 <div class="midNLP"></div>
-                <div class="bottomNLP"><p class = boardTitle > Side Effects</p></div>
+                <div class="bottomNLPHeader"><p class = boardTitle > Side Effects</p></div>
+                <div class="bottomNLP"></div>
             </div>
         </div>            
         
