--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
         </div>
         <div class="dashboard">
             <div class="drugBoard"><p class="boardTitle">Drug Board</p><ul class="drugList"></ul></div>
-            <div class="graphPannel"></div>
+            <div class="graphHolder">
+                <div class="graphPannel"></div>
+                <div class="graphPannelTitle"><p class="graphTitle"><u>Satisfaction of drugs for different Symptoms</u></p></div>
+            </div>
             <div class="NLPPannel">
-                <div class="topNLPHeader"><p class = boardTitle > Reviews</p></div>
+                <div class="topNLPConHeader"></div>
+                <div class="topNLPHeader"><p class = boardTitle >Drug Reviews</p></div>
                 <div class="topNLP"></div>
-                <div class="midNLPHeader"><p class = boardTitle > Effectiveness</p></div>
+                <div class="midNLPHeader"><p class = boardTitle >Drug Effectiveness</p></div>
                 <div class="midNLP"></div>
-                <div class="bottomNLPHeader"><p class = boardTitle > Side Effects</p></div>
+                <div class="bottomNLPHeader"><p class = boardTitle >Side Effects</p></div>
                 <div class="bottomNLP"></div>
             </div>
         </div>            
